# cdk-aws-s3-transfer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  install-cdk.sh  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
cdk_aws_s3_transfer/: __init__.py  config.py  s3_transfer_stack.py
examples/: README.md  real-world-usage.py
examples/custom-configuration/: README.md  app.py
examples/multi-environment/: README.md  app.py  cdk.json
examples/simple-usage/: README.md  app.py  test-acceleration.sh
tests/: __init__.py  test_core.py
